@@ -2,5 +2,8 @@
 source "http://rubygems.org"
 gemspec
 
+gem 'sinatra', :group => :development_sinatra
+gem 'rack', :group => :development_sinatra
+
 gem 'escape_utils', :group=>:development, :platforms => [:mri_19, :mri_18]
 gem 'simplecov', :group=>:development, :platforms => [:mri_19]
